名前解決API。
